base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hero-app-service
spec:
  type: LoadBalancer
  selector:
    app: hero-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
